--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <header style="float: top"><center> <img height=75px width=150px src="DIgiART.png"><br><font size=4 family=impact color=indigo> Graphics Company</font></center></header>
 <nav style="float: top">
-	<ul><li><a href="file:///C:/Users/aniln/Desktop/WEB%20DEVELOPER/index.html"><img style="background-color: " height=20px width=20px src="C:\Users\aniln\Desktop\WEB DEVELOPER\bwGear1.svg"></a></li>
+	<ul><li><a href="index.html"><img style="background-color: " height=20px width=20px src="bwGear1.svg"></a></li>
 		<li><a href="cv.html">Home</a></li>
 		<li><a href="cv.html">News</a></li>
 		<li><a href="cv.html">Gallery</a></li>
 		<li><a href="cv.html">Contact</a></li>
 		<li><a href="about.html">About</a></li>
 
-		<li style="float: right;"><a class="active" href="file:///C:/Users/aniln/Desktop/WEB%20DEVELOPER/cv.html">Careers</a></li>
+		<li style="float: right;"><a class="active" href="cv.html">Careers</a></li>
 		
 	</ul>
 
