--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 		<title>DIgiART Company 
 		</title>
 	<head>
+		
+		<div>
 			<body style="background-image: url('background4.jpeg');">
 
 			<p><h1>This is a GRAPHICS DEVELOPMENT company</h1></p>
@@ -40,7 +42,7 @@
 <iframe src="C:/Users/aniln/Desktop/WEB%20DEVELOPER/cv.html"></iframe>-->
 
 </body><br>
-
+	</div>
 
 <footer style="float: bottom"><center>Copyright 2019 DIgiART Grafix Technologies</center></footer>
  
