--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 		<li><a href="cv.html">Gallery</a></li>
 		<li><a href="cv.html">Contact</a></li>
 		<li><a href="About</a></li>
-		<li style="float: right;"><a class="active" href="cv.html">Careers</a></li>
+		<li><a class="active" href="cv.html">Careers</a></li>
 	</ul>
 
 	<head><link rel="stylesheet" type="text/css" href="home.css">
