--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<head>
 		
 		<div>
-			<body style="background-image: height=80% url('background4.jpeg');">
+			<body style="background-image: url('background4.jpeg');">
 
 			<p><h1>This is a GRAPHICS DEVELOPMENT company</h1></p>
 			
